added other sprite things, need to implement the game

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Aiden Thomas</title>
     <link href="./css/98.css" rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet">
+
   </head>
   <body>
     <div>
@@ -197,5 +198,6 @@
 
   </body>
     <script src="./shmovemnt.js"></script>
+    <script src="./data.js"></script>
     <script src="./game.js"></script>
 </html>
