added some more to the game

--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
         </div>
 
         <div class="title-bar-controls">
-          <button aria-label="Close"></button>
         </div>
       </div>
       <div class="window-body">
@@ -137,8 +136,6 @@
               </ul>
           </ul>
         <section class="field-row" style="justify-content: flex-end">
-          <button>OK</button>
-          <button>Cancel</button>
         </section>
       </div>
     </div>
@@ -152,7 +149,6 @@
         </div>
 
         <div class="title-bar-controls">
-          <button aria-label="Close"></button>
         </div>
       </div>
       <div class="window-body">
@@ -164,8 +160,6 @@
 
          </fieldset> 
         <section class="field-row" style="justify-content: flex-end">
-          <button>OK</button>
-          <button>Cancel</button>
         </section>
       </div>
     </div>
@@ -178,7 +172,6 @@
         </div>
 
         <div class="title-bar-controls">
-          <button aria-label="Close"></button>
         </div>
       </div>
       <div class="window-body">
@@ -188,8 +181,9 @@
         </canvas>
         
         <section class="field-row" style="justify-content: flex-end">
-          <button>OK</button>
-          <button>Cancel</button>
+            <button>Rules</button>
+          <button>Submit Defense</button>
+            <button>Submit Offense</button>
         </section>
       </div>
     </div>
